# RL-SFT

./: .env.example  .gitignore  CLAUDE.md  README.md  SEED_GENERATION_SUMMARY.md  docker-compose.yml  pyproject.toml  pytest.ini  ruff.toml
.github/workflows/: publish-vllm-docker.yml
docker/: Dockerfile.sandbox  Dockerfile.vllm  Dockerfile.vllm.full  Dockerfile.vllm.local  requirements-vllm.in  requirements-vllm.txt
docs/: VLLM_DEPLOYMENT.md
scripts/: analyze_quality_filter_report.py  assess_evolution.py  crawl_seeds.py  demo_task_generator.py  demo_task_validation.py  extract_ms_from_real_workflows.py  extract_so_with_code.py  finalize_real_data.py  finalize_seeds.py  fix_math_references_with_llm.py  generate_all_trajectories_real_env.py  generate_llm_code_debug.py  generate_seed_prompts.py  generate_single_trajectory_real_env.py  merge_final_pool.py  pull_vllm_image.sh  quality_assessment.py  quick_crawl.py  real_crawl_and_quality.py  run_evolution.py  run_quality_filter.py  start_local_vllm.py  start_vllm_docker.sh  stop_vllm_docker.sh  trajectory_sample.py  verify_vllm.sh
scripts/archive/: build_code_debug_quick.py  check_quality_filter_embedding.py  crawl_so_only.py  extract_seeds_simple.py  merge_seeds.py  process_gsm8k.py  process_real_datasets.py  process_stackoverflow_stream.py  stream_so_python.py
src/agent_sft/: __init__.py  (+1 more)
tests/: __init__.py  test_agent_loop.py  test_local_llm.py  test_quality_filter.py  test_trajectory_sample.py  test_unified_client.py  test_vllm_client.py  test_volcano_claude.py  test_volcano_claude_native.py
(+40 files in other folders)
